<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/gif_logo_2" />



    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/reportResult"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#009568"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="107dp"
        android:layout_height="106dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/background_light"
        android:gravity="center_horizontal|fill_horizontal"
        android:layout_margin="8dp"
        android:padding="8dp">

    <RelativeLayout
        android:id="@+id/buttonbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imagebox"
        android:layout_margin="0dp"
        android:padding="8dp">

        <Button
            android:id="@+id/scanFairplay"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/dummy"
            android:background="@drawable/button_back"
            android:text="@string/scan_fairplay" />

        <LinearLayout
            android:id="@+id/dummy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/scanResult"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/dummy"
            android:background="@drawable/button_back"
            android:text="@string/scan_results" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imagebox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonbox2"
        android:layout_margin="0dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/fairplayView"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/dummy3"
            android:background="@drawable/button_back"
            android:text="@string/scan_fairplay" />

        <LinearLayout
            android:id="@+id/dummy3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/resultView"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/dummy3"
            android:background="@drawable/button_back"
            android:text="@string/scan_results" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonbox2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/finalize"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/dummy2"
            android:background="@drawable/button_back"
            android:text="@string/send_report" />

        <LinearLayout
            android:id="@+id/dummy2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/generate"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/dummy2"
            android:background="@drawable/button_back"
            android:text="@string/generate_report" />

    </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>

<!--<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/gif_logo_2"/>

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/background_light"
        android:text="@string/reportResult"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="107dp"
        android:layout_height="106dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/background_light"
        android:gravity="center_horizontal|fill_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/scanResult"
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:text="@string/scan_results"
                android:background="@drawable/button_back"/>

            <Button
                android:id="@+id/scanFairplay"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:text="@string/scan_fairplay"
                android:background="@drawable/button_back"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/resultView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:padding="10px"
                android:scaleType="centerInside"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ImageView
                android:id="@+id/fairplayView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:padding="10px"
                android:scaleType="centerInside"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/generate"
                android:layout_width="176dp"
                android:layout_height="58dp"
                android:text="@string/generate_report"
                android:background="@drawable/button_back"/>

            <Button
                android:id="@+id/finalize"
                android:layout_width="176dp"
                android:layout_height="58dp"
                android:text="@string/send_report"
                android:background="@drawable/button_back"/>
        </TableRow>

    </TableLayout>


</RelativeLayout>-->